# bp-python

./: .gitmodules  BUILDING  LICENSE.txt  README  README.textile  TODO  build.properties  build.xml
src/: BuildConfigs.cmake  BuiltIns.cpp  BuiltIns.hh  CMakeLists.txt  DataMapping.cpp  DataMapping.hh  Definition.cpp  Definition.hh  PythonHeaders.hh  PythonInterpreter.cpp  PythonInterpreter.hh  PythonUtils.cpp  PythonUtils.hh  PythonWork.cpp  PythonWork.hh  ServiceGlobals.hh  build.xml  ext_fixup.sh  files_inprogress.txt  libpython_fixup.sh  manifest.json  service.cpp
src/python/: browserplus.py
src/util/: bpenv.hh  bpenv_UNIX.cpp  bpsync.hh  bpsync_UNIX.cpp  bpsync_Windows.cpp  bpthread.hh  bpthread_Darwin.cpp  bpthread_Windows.cpp  fileutils.cpp  fileutils.hh
test/: build.xml  runtests.rb  services.txt
test/BadType/: bad_type.py  manifest.json
test/BasicService/: hello_world.py  manifest.json
test/Crypto/: README
test/DoubleDefinition/: double_definition.py
test/SHA1/: README
tests/: bp_service_runner.rb  build.xml  progress.txt  runtests.rb
tests/BadType/: bad_type.py  manifest.json
tests/BasicService/: hello_world.py
tests/Crypto/: crypto.py  manifest.json
tests/DoubleDefinition/: double_definition.py  manifest.json
tests/FileChecksum/: checksum.py  manifest.json
tests/NativeBundledExtension/: bit_shifter.py  manifest.json
tests/NativeBundledExtension/extsrc/: bit_shift.c  extconf.py  test.py
tests/RequireTest/: hello_world.py  manifest.json  myinclude.py
tests/SHA1/: README  manifest.json  sha1.py
tests/SyntaxError/: manifest.json  syntax_error.py
unittest/: progress.txt  unittest.rb
unittest/FileChecksum/: manifest.json
unittest/NativeBundledExtension/: manifest.json
unittest/NativeBundledExtension/extsrc/: extconf.py  test.py
unittest/RequireTest/: myinclude.py
unittest/SHA1/: manifest.json
